# sql-talk

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/agents/: base.py  vanna.py
database/: init.sql
